--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,28 +15,53 @@ header{
     width: 30%;
     padding:10px;
 }
+h1{
+    font-family: "Georgia", Times, Times New Roman, serif;
+    color: #ffffff;
+    background: #4aaaa5;
+    text-align: center; 
+}
+
+h2, h3, h4, h5, h6{
+    font-family: "Georgia", Times, Times New Roman, serif;
+    color:#4aaaa5;
+}
+nav{
+
+}
 ul{
+    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     background-color: yellow;
     text-decoration: none;
     float: right;
 } 
 div{
-background-color: blue;
+    width: 650px;
+    margin: 0;
+    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
+    color: #777777;
+    background-color: #ffffff;
+    border-color: #dddddd;
 }
 
 section{
+    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     background-color: pink;
     width: 650px;
     margin:0;
+    
 }
 aside{
+    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     background-color: orange;
+    text-align: left;
     width: 270px;
     margin: 0 auto;
     border:#dddddd;
     float:right;
     }
 footer{
+    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     color: #cccccc;
     background: #666666; 
 }
