--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,20 @@
 
 html{
-    background-color: tan;
-    width: 980px;
+    width: 960px;
     margin: 0 auto;
-    background-image: "assets/images/concrete-texture.png";
 }
 header{
     font-family: "Georgia", Times, Times New Roman, serif;
     color: #ffffff;
     background: #4aaaa5;
     border: #cccccc;
+    border-bottom: none;
     text-align: center; 
     font-size: 1 em;
-    width: 30%;
-    padding:10px;
-}
-h1{
-    font-family: "Georgia", Times, Times New Roman, serif;
-    color: #ffffff;
-    background: #4aaaa5;
-    text-align: center; 
+    height: auto;
+    width: 270px;
+    margin-left:125px;
+    float:left;
 }
 
 h2, h3, h4, h5, h6{
@@ -27,42 +22,80 @@ h2, h3, h4, h5, h6{
     color:#4aaaa5;
 }
 nav{
-
+	width: 270px;
+	float: right;
+	text-align: center;
+	margin-right: 125px;
 }
 ul{
-    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
-    background-color: yellow;
-    text-decoration: none;
-    float: right;
-} 
-div{
-    width: 650px;
+    color:#777777;
+    list-style-type: none;
     margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+li{
+    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
+    color:#777777;
+    background-color: #ffffff;
+    list-style: none;
+    vertical-align: middle;
+	margin: 0;
+    padding: 16px;
+    float:right;
+} 
+a{
+    color:#777777;
+    text-decoration: none;
+}
+div{
     font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     color: #777777;
     background-color: #ffffff;
     border-color: #dddddd;
+    width: 960px;
+    clear: both;
+    background: url("../images/concrete-texture.png");
+    border-top-style: solid;
+    border-top-width: 2px;
 }
 
 section{
     font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
-    background-color: pink;
-    width: 650px;
-    margin:0;
-    
+    background: url("../images/concrete-texture.png");
+    color: #777777;
+    background-color: #ffffff;
+    width: 690px;
+    border-color: #dddddd;
+    padding:15px;
+    clear: both;
+	margin: 0 auto 6em auto;
 }
+
 aside{
     font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
-    background-color: orange;
-    text-align: left;
+    text-align: center;
+    background-color: #ffffff;
     width: 270px;
-    margin: 0 auto;
     border:#dddddd;
-    float:right;
-    }
+    margin: 50px 50px 75px 100px;
+    padding:10px;
+   float:right;
+}
 footer{
     font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     color: #cccccc;
-    background: #666666; 
+    background: #666666;
+    text-align: center;
+    position: absloute;
+    vertical-align: bottom;
+    line-height: 90px;
+    width: 960px;
+    margin: 0;
+    font-size: smaller;
+    border: #4aaaa5;
+    border-top-style: solid;
+    border-top-width: 10px;
+
 }
 
