--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,9 @@ header{
     font-size: 1 em;
     height: auto;
     width: 270px;
-    margin-left:125px;
+    margin-left:75px;
     float:left;
 }
-
 h2, h3, h4, h5, h6{
     font-family: "Georgia", Times, Times New Roman, serif;
     color:#4aaaa5;
@@ -28,18 +27,21 @@ nav{
 	margin-right: 125px;
 }
 ul{
+    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     color:#777777;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    vertical-align: right;
+  
+
 }
+
 li{
-    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     color:#777777;
     background-color: #ffffff;
     list-style: none;
-    vertical-align: middle;
 	margin: 0;
     padding: 16px;
     float:right;
@@ -58,6 +60,7 @@ div{
     background: url("../images/concrete-texture.png");
     border-top-style: solid;
     border-top-width: 2px;
+    height: 800px;
 }
 
 section{
@@ -70,6 +73,11 @@ section{
     padding:15px;
     clear: both;
 	margin: 0 auto 6em auto;
+}
+article{
+    margin-left:75px;
+    margin-right:400px;
+    text-align: justify;
 }
 
 aside{
@@ -98,4 +106,16 @@ footer{
     border-top-width: 10px;
 
 }
+.contacts{
+    float: left;
+    margin-left:75px;
+    margin-right:400px;
+}
+.contacts > label,.contacts > input{
+width: 100%;
 
+}
+portpic{
+
+
+}
