--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,20 @@ header{
     margin-left:75px;
     float:left;
 }
+body{
+    background: url("../images/concrete-texture.png");
+}
+.h1{
+    font-family: "Georgia", Times, Times New Roman, serif;
+    color:#4aaaa5;
+    font-size: 2em;
+}
 h2, h3, h4, h5, h6{
     font-family: "Georgia", Times, Times New Roman, serif;
     color:#4aaaa5;
+    padding-left: 30px;
+    padding-right: 10px;
+    background-color: #ffffff;
 }
 nav{
 	width: 270px;
@@ -33,7 +44,7 @@ ul{
     padding: 0;
     overflow: hidden;
     vertical-align: right;
-  
+
 
 }
 
@@ -56,34 +67,37 @@ div{
     border-color: #dddddd;
     width: 960px;
     clear: both;
-    background: url("../images/concrete-texture.png");
+    
     border-top-style: solid;
     border-top-width: 2px;
-    height: 800px;
+    height: 600px;
 }
 
 section{
-    font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
-    background: url("../images/concrete-texture.png");
-    color: #777777;
-    background-color: #ffffff;
-    width: 690px;
-    border-color: #dddddd;
     padding:15px;
-    clear: both;
-	margin: 0 auto 6em auto;
 }
 article{
-    margin-left:75px;
-    margin-right:300px;
+    margin-left: 75px;
+    margin-right: 350px;
     text-align: justify;
+    background-color: #ffffff;
+    
 }
+bdi{
+        margin-left: 75px;
+        margin-right: 350px;
+        text-align: justify;
+        background-color: #ffffff;
+        clear: both;
+        
+    }
+
 
 aside{
     font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
     text-align: center;
     background-color: #ffffff;
-    width: 270px;
+    width: 250px;
     border:#dddddd;
     margin: 50px 50px 75px 100px;
     padding:10px;
@@ -105,21 +119,24 @@ footer{
     border-top-width: 10px;
 
 }
+form{
+
+    margin-left: 75px;
+    margin-right: 350px;
+    text-align: justify;
+    background-color: #ffffff;
+}
 .contacts{
     float: left;
-    margin-left:75px;
-    margin-right:400px;
+    margin-left: 75px;
+    margin-right: 350px;
+    text-align: justify;
+    background-color: #ffffff;
+    
 }
 .contacts > label,.contacts > input{
 width: 100%;
-
-.button{
-    color: #4aaaa5;
-
-}
+background-color: #ffffff;
 
 }
 portpic{
-
-
-}
