--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,20 +15,20 @@ header{
     margin-left:75px;
     float:left;
 }
-body{
-    background: url("../images/concrete-texture.png");
-}
+
 .h1{
     font-family: "Georgia", Times, Times New Roman, serif;
     color:#4aaaa5;
     font-size: 2em;
 }
-h2, h3, h4, h5, h6{
+
+h2,h3, h4, h5, h6{
     font-family: "Georgia", Times, Times New Roman, serif;
-    color:#4aaaa5;
+    color: #4aaaa5;
     padding-left: 30px;
     padding-right: 10px;
     background-color: #ffffff;
+   
 }
 nav{
 	width: 270px;
@@ -62,6 +62,7 @@ a{
 }
 div{
     font-family: "Arial", Helvetica Neue, Helvetica, sans-serif;
+    background: url("../images/concrete-texture.png");
     color: #777777;
     background-color: #ffffff;
     border-color: #dddddd;
@@ -76,9 +77,12 @@ div{
 section{
     padding:15px;
 }
+  
 article{
+    margin-top: 50px;
     margin-left: 75px;
-    margin-right: 350px;
+    margin-right: 370px;
+    padding: 240 px;
     text-align: justify;
     background-color: #ffffff;
     
@@ -119,17 +123,14 @@ footer{
     border-top-width: 10px;
 
 }
-form{
-
-    margin-left: 75px;
-    margin-right: 350px;
-    text-align: justify;
-    background-color: #ffffff;
-}
 .contacts{
     float: left;
-    margin-left: 75px;
+    margin-top:-200px;
+    margin-left: 10px;
     margin-right: 350px;
+    height:500px;
+    width: 450px;
+    padding: 20px;
     text-align: justify;
     background-color: #ffffff;
     
@@ -139,4 +140,12 @@ width: 100%;
 background-color: #ffffff;
 
 }
-portpic{
+portpic{display: inline-block;
+    width: 250px;
+    height: 100px;
+    margin: 20px;
+    float: left;
+    position: relative;
+    top: -10px;
+    width: 100%;
+}
